<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context="com.fleato.asadullah.event.NewEvent">

        <TextView
            android:id="@+id/headline1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_alignParentTop="true"
            android:gravity="center"
            android:text="@string/newevent"
            android:textSize="@dimen/headline_size" />

        <TextView
            android:id="@+id/headline2"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/headline1"
            android:gravity="center"
            android:text="@string/register_here"
            android:textSize="@dimen/headline_size" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:id="@+id/tvFirstName"
            android:layout_below="@+id/headline2"
            android:layout_marginTop="20dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"/>

        <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/etFirstName"
            android:layout_alignBaseline="@+id/tvFirstName"
            android:layout_toRightOf="@id/tvFirstName"
            android:layout_toEndOf="@+id/tvFirstName"
            android:maxLines = "1"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/description"
            android:id="@+id/tvLastName"
            android:layout_below="@+id/tvFirstName"
            android:layout_marginTop="20dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"/>


        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine"
            android:ems="10"
            android:id="@+id/description"
            android:editable="true"
            android:enabled="true"
            android:minLines="6"
            android:maxLines="6"
            android:isScrollContainer="true"
            android:background="#fafafa"
            android:textIsSelectable="true"
            android:focusable="true"
            android:gravity="top"
            android:padding="24dp"
            style="@style/Base.TextAppearance.AppCompat.Large"
            android:layout_centerVertical="true"
            android:layout_alignLeft="@+id/tvLastName"
            android:layout_alignStart="@+id/tvLastName"
            android:layout_below="@+id/tvLastName"
            android:layout_marginTop="30dp"
            android:hint="Description of the event"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:id="@+id/button"
            android:layout_below="@+id/description"/>

    </RelativeLayout>
</ScrollView>